--- a/main.html
+++ b/main.html
@@ -4,11 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Print Function Name</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
